compiler/mesh-parser/tests/snapshots/parser_tests__module_nested.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"module Outer do\\n  module Inner do\\n  end\\nend\")"
---
SOURCE_FILE@0..43
  MODULE_DEF@0..43
    MODULE_KW@0..6 "module"
    WHITESPACE@6..7 " "
    NAME@7..12
      IDENT@7..12 "Outer"
    WHITESPACE@12..13 " "
    DO_KW@13..15 "do"
    BLOCK@15..40
      NEWLINE@15..16 "\n"
      WHITESPACE@16..18 "  "
      MODULE_DEF@18..39
        MODULE_KW@18..24 "module"
        WHITESPACE@24..25 " "
        NAME@25..30
          IDENT@25..30 "Inner"
        WHITESPACE@30..31 " "
        DO_KW@31..33 "do"
        BLOCK@33..34
          NEWLINE@33..34 "\n"
        WHITESPACE@34..36 "  "
        END_KW@36..39 "end"
      NEWLINE@39..40 "\n"
    END_KW@40..43 "end"
  EOF@43..43 ""
