compiler/mesh-parser/tests/snapshots/parser_tests__module_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"module Math do\\n  pub fn add(x, y) do\\n    x + y\\n  end\\nend\")"
---
SOURCE_FILE@0..56
  MODULE_DEF@0..56
    MODULE_KW@0..6 "module"
    WHITESPACE@6..7 " "
    NAME@7..11
      IDENT@7..11 "Math"
    WHITESPACE@11..12 " "
    DO_KW@12..14 "do"
    BLOCK@14..53
      NEWLINE@14..15 "\n"
      WHITESPACE@15..17 "  "
      FN_DEF@17..52
        VISIBILITY@17..20
          PUB_KW@17..20 "pub"
        WHITESPACE@20..21 " "
        FN_KW@21..23 "fn"
        WHITESPACE@23..24 " "
        NAME@24..27
          IDENT@24..27 "add"
        PARAM_LIST@27..33
          L_PAREN@27..28 "("
          PARAM@28..29
            IDENT@28..29 "x"
          COMMA@29..30 ","
          WHITESPACE@30..31 " "
          PARAM@31..32
            IDENT@31..32 "y"
          R_PAREN@32..33 ")"
        WHITESPACE@33..34 " "
        DO_KW@34..36 "do"
        BLOCK@36..47
          NEWLINE@36..37 "\n"
          WHITESPACE@37..41 "    "
          BINARY_EXPR@41..46
            NAME_REF@41..42
              IDENT@41..42 "x"
            WHITESPACE@42..43 " "
            PLUS@43..44 "+"
            WHITESPACE@44..45 " "
            NAME_REF@45..46
              IDENT@45..46 "y"
          NEWLINE@46..47 "\n"
        WHITESPACE@47..49 "  "
        END_KW@49..52 "end"
      NEWLINE@52..53 "\n"
    END_KW@53..56 "end"
  EOF@56..56 ""
