compiler/mesh-parser/tests/snapshots/parser_tests__nested_calls.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"foo(bar(x))\")"
---
SOURCE_FILE@0..11
  CALL_EXPR@0..11
    NAME_REF@0..3
      IDENT@0..3 "foo"
    ARG_LIST@3..11
      L_PAREN@3..4 "("
      CALL_EXPR@4..10
        NAME_REF@4..7
          IDENT@4..7 "bar"
        ARG_LIST@7..10
          L_PAREN@7..8 "("
          NAME_REF@8..9
            IDENT@8..9 "x"
          R_PAREN@9..10 ")"
      R_PAREN@10..11 ")"
  EOF@11..11 ""
