compiler/mesh-parser/tests/snapshots/parser_tests__newlines_inside_parens_ignored.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
assertion_line: 503
expression: "parse_and_debug(\"foo(\\n  1,\\n  2\\n)\")"
---
SOURCE_FILE@0..15
  CALL_EXPR@0..15
    NAME_REF@0..3
      IDENT@0..3 "foo"
    ARG_LIST@3..15
      L_PAREN@3..4 "("
      NEWLINE@4..5 "\n"
      WHITESPACE@5..7 "  "
      LITERAL@7..8
        INT_LITERAL@7..8 "1"
      COMMA@8..9 ","
      NEWLINE@9..10 "\n"
      WHITESPACE@10..12 "  "
      LITERAL@12..13
        INT_LITERAL@12..13 "2"
      NEWLINE@13..14 "\n"
      R_PAREN@14..15 ")"
  EOF@15..15 ""
