compiler/mesh-parser/tests/snapshots/parser_tests__parse_api_let_binding.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"let x = 42\")"
---
SOURCE_FILE@0..10
  LET_BINDING@0..10
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "x"
    WHITESPACE@5..6 " "
    EQ@6..7 "="
    WHITESPACE@7..8 " "
    LITERAL@8..10
      INT_LITERAL@8..10 "42"
  EOF@10..10 ""
