compiler/mesh-parser/tests/snapshots/parser_tests__parse_api_simple_expression.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"1 + 2\")"
---
SOURCE_FILE@0..5
  BINARY_EXPR@0..5
    LITERAL@0..1
      INT_LITERAL@0..1 "1"
    WHITESPACE@1..2 " "
    PLUS@2..3 "+"
    WHITESPACE@3..4 " "
    LITERAL@4..5
      INT_LITERAL@4..5 "2"
  EOF@5..5 ""
