compiler/mesh-parser/tests/snapshots/parser_tests__parser_cluster_decorator_invalid_count_shape.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..43
  FN_DEF@0..39
    ERROR_NODE@0..14
      AT@0..1 "@"
      IDENT@1..8 "cluster"
      L_PAREN@8..9 "("
      INT_LITERAL@9..10 "1"
      COMMA@10..11 ","
      WHITESPACE@11..12 " "
      INT_LITERAL@12..13 "2"
      R_PAREN@13..14 ")"
    WHITESPACE@14..15 " "
    FN_KW@15..17 "fn"
    WHITESPACE@17..18 " "
    NAME@18..25
      IDENT@18..25 "enqueue"
    PARAM_LIST@25..30
      L_PAREN@25..26 "("
      PARAM@26..29
        IDENT@26..29 "job"
      R_PAREN@29..30 ")"
    WHITESPACE@30..31 " "
    DO_KW@31..33 "do"
    BLOCK@33..39
      NEWLINE@33..34 "\n"
      WHITESPACE@34..36 "  "
      NAME_REF@36..39
        IDENT@36..39 "job"
  NEWLINE@39..40 "\n"
  END_KW@40..43 "end"
  EOF@43..43 ""

errors:
  - expected exactly one replication count in `@cluster(N)` @10..11
  - expected `end` to close function body @39..40
