compiler/mesh-parser/tests/snapshots/parser_tests__parser_cluster_decorator_with_count_fn_def.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..41
  FN_DEF@0..41
    CLUSTER_DECORATOR_DECL@0..11
      AT@0..1 "@"
      IDENT@1..8 "cluster"
      L_PAREN@8..9 "("
      INT_LITERAL@9..10 "3"
      R_PAREN@10..11 ")"
    WHITESPACE@11..12 " "
    DEF_KW@12..15 "def"
    WHITESPACE@15..16 " "
    NAME@16..23
      IDENT@16..23 "enqueue"
    PARAM_LIST@23..28
      L_PAREN@23..24 "("
      PARAM@24..27
        IDENT@24..27 "job"
      R_PAREN@27..28 ")"
    WHITESPACE@28..29 " "
    DO_KW@29..31 "do"
    BLOCK@31..38
      NEWLINE@31..32 "\n"
      WHITESPACE@32..34 "  "
      NAME_REF@34..37
        IDENT@34..37 "job"
      NEWLINE@37..38 "\n"
    END_KW@38..41 "end"
  EOF@41..41 ""
