compiler/mesh-parser/tests/snapshots/parser_tests__pattern_as_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Circle(r) as c -> c\\n  _ -> x\\nend\")"
---
SOURCE_FILE@0..44
  CASE_EXPR@0..44
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "x"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..31
      AS_PAT@12..26
        CONSTRUCTOR_PAT@12..21
          IDENT@12..18 "Circle"
          L_PAREN@18..19 "("
          IDENT_PAT@19..20
            IDENT@19..20 "r"
          R_PAREN@20..21 ")"
        WHITESPACE@21..22 " "
        IDENT@22..24 "as"
        WHITESPACE@24..25 " "
        IDENT_PAT@25..26
          IDENT@25..26 "c"
      WHITESPACE@26..27 " "
      ARROW@27..29 "->"
      WHITESPACE@29..30 " "
      NAME_REF@30..31
        IDENT@30..31 "c"
    NEWLINE@31..32 "\n"
    WHITESPACE@32..34 "  "
    MATCH_ARM@34..40
      WILDCARD_PAT@34..35
        IDENT@34..35 "_"
      WHITESPACE@35..36 " "
      ARROW@36..38 "->"
      WHITESPACE@38..39 " "
      NAME_REF@39..40
        IDENT@39..40 "x"
    NEWLINE@40..41 "\n"
    END_KW@41..44 "end"
  EOF@44..44 ""
